--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,14 @@
 buildscript {
-
-    ext {
-        springBootVersion = '2.1.4.RELEASE'
-        kotlin_version = '1.3.30'
-
-    }
     repositories {
         jcenter()
         mavenCentral()
     }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+}
+
+plugins {
+    id 'org.springframework.boot' version '2.1.5.RELEASE'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.30'
+    id 'com.github.ben-manes.versions' version '0.21.0'
 }
 
 apply plugin: 'java'
@@ -20,7 +16,6 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'groovy'
 apply plugin: 'kotlin'
-
 
 repositories {
     mavenCentral()
@@ -76,7 +71,7 @@ dependencies {
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     annotationProcessor('org.projectlombok:lombok:1.18.8')
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     compile("org.springframework.boot:spring-boot-starter-web")
     compileOnly('org.projectlombok:lombok:1.18.8')
@@ -93,11 +88,11 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-cache")
 
     implementation("org.springframework.boot:spring-boot-starter-security")
-    implementation("org.springframework.security.oauth:spring-security-oauth2:2.3.5.RELEASE")
+    implementation("org.springframework.security.oauth:spring-security-oauth2:2.3.6.RELEASE")
     implementation("org.springframework.security:spring-security-jwt:1.0.10.RELEASE")
 
     implementation("net.logstash.logback:logstash-logback-encoder:5.3")
-    implementation("com.microsoft.azure:applicationinsights-logging-logback:2.3.1")
+    implementation("com.microsoft.azure:applicationinsights-logging-logback:2.4.0-BETA")
     implementation("com.microsoft.azure:applicationinsights-spring-boot-starter:1.2.0-BETA")
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
@@ -120,7 +115,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
 
-    testImplementation('org.assertj:assertj-core:3.9.1')
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation 'org.gebish:geb-core:2.3.1'
