--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ server.tomcat.protocol_header=x-forwarded-proto
 app.db.url=jdbc:hsqldb:mem:whereabouts-api-db;sql.syntax_pgs=true;shutdown=false
 
 application.insights.ikey=
-logging.uris.exclude.regex=/health|/info|/swagger.*|/webjars/.*|/v2/api-docs
+logging.uris.exclude.regex=/health|/info|/ping|/swagger.*|/webjars/.*|/v2/api-docs
