DT-50 Reduce to trace the request logging, reorder Filters, add W3C support for distributed tracing. Add correlationId filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ app.db.url=jdbc:hsqldb:mem:whereabouts-api-db;sql.syntax_pgs=true;shutdown=false
 
 application.insights.ikey=
 logging.uris.exclude.regex=/health|/info|/ping|/swagger.*|/webjars/.*|/v2/api-docs
+
+azure.application-insights.web.enable-W3C=true
+azure.application-insights.web.enable-W3C-backcompat-mode=true
