--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     enabled: true
 
   datasource:
-    url: 'jdbc:h2:mem:whereabouts-api-db;MODE=PostgreSQL'
+    url: 'jdbc:hsqldb:mem:whereabouts-api-db;sql.syntax_pgs=true;shutdown=false'
     continueOnError: true
 
     hikari:
