NN-2009: Fix missing trace log messages and some general tidying (#38)
* NN-2009: Fix missing trace log messages and some general tidying

* NN-2009: Temporarily switch back to hsqldb until work out what is going wrong

--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,43 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
-}
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
+import java.time.Instant
+import java.time.LocalDate
+import java.time.format.DateTimeFormatter
 
 plugins {
-    id 'org.springframework.boot' version '2.1.5.RELEASE'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.30'
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.40'
+    id 'groovy'
+    id 'org.springframework.boot' version '2.1.6.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.github.ben-manes.versions' version '0.21.0'
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'groovy'
-apply plugin: 'kotlin'
-
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 compileTestKotlin {
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = '11'
     }
 }
 
 project.sourceCompatibility = 11
 project.targetCompatibility = 11
 
-def applicationName = 'whereabouts-api'
-def today = java.time.Instant.now()
-def todayDate = java.time.LocalDate.now()
-def formatter = java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd")
+def today = Instant.now()
 group = 'uk.gov.justice.digital.hmpps'
+
+def todayDate = LocalDate.now()
+def formatter = DateTimeFormatter.ofPattern('yyyy-MM-dd')
 version todayDate.format(formatter)
 
 jar {
-    baseName = applicationName
+    baseName = rootProject.name
     manifest {
-        attributes 'Implementation-Title': applicationName,
+        attributes 'Implementation-Title': rootProject.name,
                 'Implementation-Version': System.getenv('CI') ? "${version}.${System.getenv('CIRCLE_BUILD_NUM')}" : version
     }
 }
@@ -64,66 +61,69 @@ springBoot {
 }
 
 configurations {
-    compile.exclude  module: "tomcat-jdbc"
+    implementation.exclude module: 'tomcat-jdbc'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom(SpringBootPlugin.BOM_COORDINATES)
+    }
 }
 
 dependencies {
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-    annotationProcessor('org.projectlombok:lombok:1.18.8')
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
 
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compileOnly('org.projectlombok:lombok:1.18.8')
+    runtime 'org.hsqldb:hsqldb:2.4.1'
+    runtime 'org.flywaydb:flyway-core:5.2.4'
+    runtime 'org.postgresql:postgresql:42.2.6'
 
-    runtime('org.hsqldb:hsqldb:2.4.1')
-    runtime("org.flywaydb:flyway-core:5.2.4")
-    runtime("org.postgresql:postgresql:42.2.5")
+    implementation 'org.hibernate:hibernate-java8'
 
-    implementation("org.hibernate:hibernate-java8")
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 
-    implementation("org.springframework.boot:spring-boot-devtools")
-    implementation("org.springframework.boot:spring-boot-starter-actuator")
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation("org.springframework.boot:spring-boot-starter-cache")
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.6.RELEASE'
+    implementation 'org.springframework.security:spring-security-jwt:1.0.10.RELEASE'
 
-    implementation("org.springframework.boot:spring-boot-starter-security")
-    implementation("org.springframework.security.oauth:spring-security-oauth2:2.3.6.RELEASE")
-    implementation("org.springframework.security:spring-security-jwt:1.0.10.RELEASE")
-
-    implementation("net.logstash.logback:logstash-logback-encoder:5.3")
-    implementation("com.microsoft.azure:applicationinsights-logging-logback:2.4.0-BETA")
-    implementation("com.microsoft.azure:applicationinsights-spring-boot-starter:1.2.0-BETA")
+    implementation 'net.logstash.logback:logstash-logback-encoder:6.1'
+    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.4.0-BETA'
+    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:1.2.0-BETA'
+    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.1.1'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'com.sun.xml.bind:jaxb-impl:2.3.2'
     implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
     implementation 'javax.activation:activation:1.1.1'
-    implementation('javax.transaction:javax.transaction-api:1.3')
+    implementation 'javax.transaction:javax.transaction-api:1.3'
 
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
-    implementation("io.jsonwebtoken:jjwt:0.9.1")
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
-    implementation("net.sf.ehcache:ehcache:2.10.6")
-    implementation("org.apache.commons:commons-lang3:3.9")
-    implementation("org.apache.commons:commons-text:1.6")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8")
-    implementation("com.pauldijou:jwt-core_2.11:0.15.0")
+    implementation 'net.sf.ehcache:ehcache:2.10.6'
+    implementation 'org.apache.commons:commons-lang3:3.9'
+    implementation 'org.apache.commons:commons-text:1.6'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.9'
+    implementation 'com.pauldijou:jwt-core_2.11:0.15.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
-
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation 'org.gebish:geb-core:2.3.1'
-    testImplementation 'org.gebish:geb-spock:2.3.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.gebish:geb-core:3.0.1'
+    testImplementation 'org.gebish:geb-spock:3.0.1'
     testImplementation 'org.seleniumhq.selenium:selenium-support:3.141.59'
     testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
     testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:3.141.59'
     testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.3'
-    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.15.0'
-    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
-
- }
+    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.23.2'
+    testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
+}
