NN-2009: Remove devtools as apparently cause of problem

--- a/build.gradle
+++ b/build.gradle
@@ -78,13 +78,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok:1.18.8'
 
-    runtime 'org.hsqldb:hsqldb:2.4.1'
+    runtime 'com.h2database:h2:1.4.199'
     runtime 'org.flywaydb:flyway-core:5.2.4'
     runtime 'org.postgresql:postgresql:42.2.6'
 
     implementation 'org.hibernate:hibernate-java8'
 
-    implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
