--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,9 @@ spring:
     enabled: true
 
   datasource:
-    url: 'jdbc:hsqldb:mem:whereabouts-api-db;sql.syntax_pgs=true;shutdown=false'
-    continueOnError: true
+    url: 'jdbc:h2:mem:whereabouts-api-db;MODE=PostgreSQL'
+    continue-on-error: true
+    type: com.zaxxer.hikari.HikariDataSource
 
     hikari:
       pool-name: OffenderActivity-CP
