NN-2009: Remove devtools as apparently cause of problem (#39)
* NN-2009: Remove devtools as apparently cause of problem

* NN-2009: Hikari is default anyway

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
     enabled: true
 
   datasource:
-    url: 'jdbc:hsqldb:mem:whereabouts-api-db;sql.syntax_pgs=true;shutdown=false'
-    continueOnError: true
+    url: 'jdbc:h2:mem:whereabouts-api-db;MODE=PostgreSQL'
+    continue-on-error: true
 
     hikari:
       pool-name: OffenderActivity-CP
