--- a/helm_deploy/whereabouts-api/templates/secrets.yaml
+++ b/helm_deploy/whereabouts-api/templates/secrets.yaml
@@ -5,3 +5,4 @@ metadata:
 type: Opaque
 data:
   APPINSIGHTS_INSTRUMENTATIONKEY: {{ .Values.secrets.APPINSIGHTS_INSTRUMENTATIONKEY | b64enc | quote }}
+  OAUTH_CLIENT_SECRET: {{ .Values.secrets.OAUTH_CLIENT_SECRET | b64enc | quote }}
