NN-2011 include oauth url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 info.app.name=HMPPS Whereabouts API
 info.app.version=1.0
 
+
 elite2.uri.root=http://localhost:8080
 elite2.api.uri.root=${elite2.uri.root}/api
 
@@ -14,6 +15,8 @@ logging.uris.exclude.regex=/health|/info|/ping|/swagger.*|/webjars/.*|/v2/api-do
 azure.application-insights.web.enable-W3C=true
 azure.application-insights.web.enable-W3C-backcompat-mode=true
 
+
+oauth.root.url = http://localhost:9090/auth
 whereabouts.api.client.id=whereabouts-api-client
 whereabouts.api.client.secret=clientsecret
-nomis.auth.url=http://localhost:9090/auth/oauth/token
+ouath.token.url=${oauth.root.url}/oauth/token
