--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,7 +62,7 @@ elite2api:
   client:
     clientId: ${whereabouts.api.client.id}
     clientSecret: ${whereabouts.api.client.secret}
-    accessTokenUri: ${nomis.auth.url}
+    accessTokenUri: ${ouath.token.url}
     tokenName: elite2_token
     authenticationScheme: header
     clientAuthenticationScheme: header
