NN-2011 fix test props

--- a/src/test/resources/test-application-override.properties
+++ b/src/test/resources/test-application-override.properties
@@ -8,4 +8,4 @@ adminToken = eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJpbnRlcm5hbFVzZXIiOmZhbHNlLC
 
 whereabouts.api.client.id=whereabouts-api-client
 whereabouts.api.client.secret=clientsecret
-nomis.auth.url=http://localhost:8090/auth/oauth/token
+ouath.token.url=http://localhost:8090/auth/oauth/token
