NN-2011 correct variable name in postgres profile

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -4,5 +4,5 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 elite2.uri.root=${ELITE2API_ENDPOINT_URL}
-oauth.root.url=${OAUTH_ENDPOINT_URL}
+oauth.root.uri=${OAUTH_ENDPOINT_URL}
 graceful.shutdown.enabled=true
