NN-2011 add missing values to postgres profile

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -5,4 +5,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 elite2.uri.root=${ELITE2API_ENDPOINT_URL}
 oauth.root.uri=${OAUTH_ENDPOINT_URL}
+
+whereabouts.api.client.id=${OAUTH_CLIENT_ID}
+whereabouts.api.client.secret=${OAUTH_CLIENT_SECRET}
+
 graceful.shutdown.enabled=true
