--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,15 +11,15 @@ services:
       - SERVER_PORT=8080
       - SPRING_PROFILES_ACTIVE=dev
 
-#  elite2:
-#    image: mojdigitalstudio/elite2-api:latest
-#    container_name: elite2
-#    depends_on:
-#      - oauth
-#    ports:
-#      - "8080:8080"
-#    healthcheck:
-#      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-#    environment:
-#      - SERVER_PORT=8080
-#      - SPRING_PROFILES_ACTIVE=nomis-hsqldb
+  elite2:
+    image: mojdigitalstudio/elite2-api:latest
+    container_name: elite2
+    depends_on:
+      - oauth
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+    environment:
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=nomis-hsqldb
