--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,3 +23,17 @@ services:
     environment:
       - SERVER_PORT=8080
       - SPRING_PROFILES_ACTIVE=nomis-hsqldb
+
+  offender-case-notes:
+    image: mojdigitalstudio/offender-case-notes:latest
+    container_name: offender-case-notes
+      depends_on:
+        - elite2
+    ports:
+      - "8083:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+    environment:
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=dev
+      - ELITE2_API_BASE_URL=http://elite2-api:8080
