overide global custom-http-errors setting

--- a/helm_deploy/whereabouts-api/templates/deployment.yaml
+++ b/helm_deploy/whereabouts-api/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
             failureThreshold: 10
           readinessProbe:
             httpGet:
-              path: /health
+              path: /ping
               port: {{ .Values.image.port }}
             periodSeconds: 20
             initialDelaySeconds: 60
