--- a/helm_deploy/whereabouts-api/templates/ingress.yaml
+++ b/helm_deploy/whereabouts-api/templates/ingress.yaml
@@ -13,6 +13,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     {{ if .Values.ingress.enable_whitelist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.whitelist | quote }}{{ end }}
+    nginx.ingress.kubernetes.io/custom-http-errors: "418"
 spec:
   tls:
   {{- range .Values.ingress.hosts }}
