DT-284: Switch to java agent w3c tracing

--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,24 @@ import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 import java.time.Instant
 import java.time.LocalDate
-import java.time.format.DateTimeFormatter
 
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
     id 'groovy'
-    id 'org.springframework.boot' version '2.1.8.RELEASE'
+    id 'org.springframework.boot' version '2.1.9.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'com.github.ben-manes.versions' version '0.24.0'
+    id 'com.github.ben-manes.versions' version '0.26.0'
 }
 
 repositories {
     mavenLocal()
     mavenCentral()
+}
+
+configurations {
+    agentDeps
+    agentDeps.transitive = false
 }
 
 compileTestKotlin {
@@ -27,18 +31,16 @@ compileTestKotlin {
 project.sourceCompatibility = 11
 project.targetCompatibility = 11
 
-def today = Instant.now()
 group = 'uk.gov.justice.digital.hmpps'
 
-def todayDate = LocalDate.now()
-def formatter = DateTimeFormatter.ofPattern('yyyy-MM-dd')
-version todayDate.format(formatter)
+def today = Instant.now()
+def todaysDate = LocalDate.now().format('yyyy-MM-dd')
+version = System.getenv('CI') ? "${todaysDate}.${System.getenv('CIRCLE_BUILD_NUM')}" : todaysDate
 
 jar {
     baseName = rootProject.name
     manifest {
-        attributes 'Implementation-Title': rootProject.name,
-                'Implementation-Version': System.getenv('CI') ? "${version}.${System.getenv('CIRCLE_BUILD_NUM')}" : version
+        attributes 'Implementation-Title': rootProject.name, 'Implementation-Version': version
     }
 }
 
@@ -46,8 +48,8 @@ springBoot {
     buildInfo {
         properties {
             artifact = rootProject.name
-            version = System.getenv('CI') ? "${version}.${System.getenv('CIRCLE_BUILD_NUM')}" : version
-            group = 'uk.gov.justice.digital.hmpps'
+            version = version
+            group = group
             name = rootProject.name
             time = today
             additional = [
@@ -80,7 +82,7 @@ dependencies {
 
     runtime 'com.h2database:h2:1.4.199'
     runtime 'org.flywaydb:flyway-core:5.2.4'
-    runtime 'org.postgresql:postgresql:42.2.6'
+    runtime 'org.postgresql:postgresql:42.2.8'
 
     implementation 'org.hibernate:hibernate-java8'
 
@@ -92,9 +94,11 @@ dependencies {
     implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.6.RELEASE'
     implementation 'org.springframework.security:spring-security-jwt:1.0.10.RELEASE'
 
-    implementation 'net.logstash.logback:logstash-logback-encoder:6.1'
-    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.5.0-BETA.3'
-    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.5.0-BETA.3'
+    implementation 'net.logstash.logback:logstash-logback-encoder:6.2'
+    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.5.1-BETA'
+    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.5.1-BETA'
+    agentDeps 'com.microsoft.azure:applicationinsights-agent:2.5.1-BETA'
+
     implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.1.1'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
@@ -112,18 +116,27 @@ dependencies {
     implementation 'net.sf.ehcache:ehcache:2.10.6'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-text:1.8'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.9'
-    implementation 'com.pauldijou:jwt-core_2.11:4.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.0'
+    implementation 'com.pauldijou:jwt-core_2.11:4.1.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.gebish:geb-core:3.0.1'
-    testImplementation 'org.gebish:geb-spock:3.0.1'
+    testImplementation 'org.gebish:geb-core:3.1'
+    testImplementation 'org.gebish:geb-spock:3.1'
     testImplementation 'org.seleniumhq.selenium:selenium-support:3.141.59'
     testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
     testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:3.141.59'
     testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.4'
-    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.8.0'
-    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.24.1'
+    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.9.0'
+    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.25.0'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
+
+    compile configurations.agentDeps
 }
+
+task copyAgent(type: Copy) {
+    from configurations.agentDeps
+    into "$buildDir/libs"
+}
+
+assemble.dependsOn copyAgent
