--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id 'groovy'
     id 'org.springframework.boot' version '2.1.9.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'com.github.ben-manes.versions' version '0.26.0'
+    id 'com.github.ben-manes.versions' version '0.27.0'
 }
 
 repositories {
@@ -95,9 +95,9 @@ dependencies {
     implementation 'org.springframework.security:spring-security-jwt:1.0.10.RELEASE'
 
     implementation 'net.logstash.logback:logstash-logback-encoder:6.2'
-    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.5.1-BETA'
-    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.5.1-BETA'
-    agentDeps 'com.microsoft.azure:applicationinsights-agent:2.5.1-BETA'
+    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.5.1-BETA.2'
+    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.5.1-BETA.2'
+    agentDeps 'com.microsoft.azure:applicationinsights-agent:2.5.1-BETA.2'
 
     implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.1.1'
 
@@ -121,14 +121,14 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.gebish:geb-core:3.1'
-    testImplementation 'org.gebish:geb-spock:3.1'
+    testImplementation 'org.gebish:geb-core:3.2'
+    testImplementation 'org.gebish:geb-spock:3.2'
     testImplementation 'org.seleniumhq.selenium:selenium-support:3.141.59'
     testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
     testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:3.141.59'
     testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.4'
     testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.9.0'
-    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.25.0'
+    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.25.1'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
 
     compile configurations.agentDeps
