--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ import java.time.LocalDate
 
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'groovy'
-    id 'org.springframework.boot' version '2.1.9.RELEASE'
+    id 'org.springframework.boot' version '2.2.2.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'org.owasp.dependencycheck' version '5.2.4'
     id 'com.github.ben-manes.versions' version '0.27.0'
 }
 
@@ -30,6 +31,15 @@ compileTestKotlin {
 
 project.sourceCompatibility = 11
 project.targetCompatibility = 11
+
+dependencyCheck {
+    failBuildOnCVSS = 5
+    suppressionFiles = ['dependency-check-suppress-spring.xml']
+    format = 'ALL'
+    analyzers {
+        assemblyEnabled = false
+    }
+}
 
 group = 'uk.gov.justice.digital.hmpps'
 
@@ -80,9 +90,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok:1.18.10'
 
-    runtime 'com.h2database:h2:1.4.199'
+    runtime 'com.h2database:h2:1.4.200'
     runtime 'org.flywaydb:flyway-core:5.2.4'
-    runtime 'org.postgresql:postgresql:42.2.8'
+    runtime 'org.postgresql:postgresql:42.2.9'
 
     implementation 'org.hibernate:hibernate-java8'
 
@@ -91,13 +101,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.6.RELEASE'
-    implementation 'org.springframework.security:spring-security-jwt:1.0.10.RELEASE'
+    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.4.0.RELEASE'
+    implementation 'org.springframework.security:spring-security-jwt:1.1.0.RELEASE'
 
-    implementation 'net.logstash.logback:logstash-logback-encoder:6.2'
-    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.5.1-BETA.2'
-    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.5.1-BETA.2'
-    agentDeps 'com.microsoft.azure:applicationinsights-agent:2.5.1-BETA.2'
+    implementation 'net.logstash.logback:logstash-logback-encoder:6.3'
+    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.6.0-BETA'
+    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.6.0-BETA'
+    agentDeps 'com.microsoft.azure:applicationinsights-agent:2.6.0-BETA'
 
     implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.1.1'
 
@@ -116,13 +126,14 @@ dependencies {
     implementation 'net.sf.ehcache:ehcache:2.10.6'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-text:1.8'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.9'
-    implementation 'com.pauldijou:jwt-core_2.11:4.1.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.1'
+    implementation 'com.pauldijou:jwt-core_2.11:4.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.guava:guava:28.1-jre'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.4'
-    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.9.0'
+    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.11.1'
     testImplementation 'com.github.tomakehurst:wiremock-standalone:2.25.1'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
 
