--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,6 +53,7 @@ management:
     health:
       cache:
         time-to-live: 2000ms
+      show-components: always
       show-details: always
     info:
       cache:
