--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'groovy'
-    id 'org.springframework.boot' version '2.2.2.RELEASE'
+    id 'org.springframework.boot' version '2.2.2.RELEASE' // remove pinning of tomcat version to 9.0.30 when next upgrading
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'org.owasp.dependencycheck' version '5.2.4'
     id 'com.github.ben-manes.versions' version '0.27.0'
@@ -40,6 +40,7 @@ dependencyCheck {
         assemblyEnabled = false
     }
 }
+ext['tomcat.version'] = '9.0.30'
 
 group = 'uk.gov.justice.digital.hmpps'
 
