--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'groovy'
-    id 'org.springframework.boot' version '2.2.2.RELEASE' // remove pinning of tomcat version to 9.0.30 when next upgrading
-    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'org.owasp.dependencycheck' version '5.2.4'
+    id 'org.springframework.boot' version '2.2.4.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.owasp.dependencycheck' version '5.3.0'
     id 'com.github.ben-manes.versions' version '0.27.0'
 }
 
@@ -40,7 +40,6 @@ dependencyCheck {
         assemblyEnabled = false
     }
 }
-ext['tomcat.version'] = '9.0.30'
 
 group = 'uk.gov.justice.digital.hmpps'
 
@@ -92,7 +91,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.10'
 
     runtime 'com.h2database:h2:1.4.200'
-    runtime 'org.flywaydb:flyway-core:5.2.4'
+    runtime 'org.flywaydb:flyway-core:6.1.4'
     runtime 'org.postgresql:postgresql:42.2.9'
 
     implementation 'org.hibernate:hibernate-java8'
@@ -110,11 +109,11 @@ dependencies {
     implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.6.0-BETA'
     agentDeps 'com.microsoft.azure:applicationinsights-agent:2.6.0-BETA'
 
-    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.1.1'
+    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.2.0'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation 'javax.xml.bind:jaxb-api:2.3.1'
-    implementation 'com.sun.xml.bind:jaxb-impl:2.3.2'
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    implementation 'com.sun.xml.bind:jaxb-impl:2.3.3-b02'
     implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
     implementation 'javax.activation:activation:1.1.1'
     implementation 'javax.transaction:javax.transaction-api:1.3'
@@ -127,15 +126,15 @@ dependencies {
     implementation 'net.sf.ehcache:ehcache:2.10.6'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-text:1.8'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.2'
     implementation 'com.pauldijou:jwt-core_2.11:4.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.guava:guava:28.1-jre'
+    implementation 'com.google.guava:guava:28.2-jre'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.4'
-    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.11.1'
+    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.12.0'
     testImplementation 'com.github.tomakehurst:wiremock-standalone:2.25.1'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
 
