--- a/build.gradle
+++ b/build.gradle
@@ -127,6 +127,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-text:1.8'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.2'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.10.2'
     implementation 'com.pauldijou:jwt-core_2.11:4.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.guava:guava:28.2-jre'
