DT-526 Update whereabouts config from elite2

--- a/src/main/resources/whereabouts/patterns/RSI.properties
+++ b/src/main/resources/whereabouts/patterns/RSI.properties
@@ -1,8 +1,13 @@
 # Risley
 RSI_A-Wing=RSI-A-.+
-RSI_A-Wing_Landing\ 1=RSI-A-1-.+
-RSI_A-Wing_Landing\ 2=RSI-A-2-.+
-RSI_A-Wing_Landing\ 3=RSI-A-3-.+
+RSI_A-Wing_North\ All=RSI-A-.-0(2[7-9]|3[0-9]|4[0-8])
+RSI_A-Wing_North\ Landing\ 1=RSI-A-1-0(2[7-9]|3[0-9]|4[0-8])
+RSI_A-Wing_North\ Landing\ 2=RSI-A-2-0(2[7-9]|3[0-9]|4[0-8])
+RSI_A-Wing_North\ Landing\ 3=RSI-A-3-0(2[7-9]|3[0-9]|4[0-8])
+RSI_A-Wing_South\ All=RSI-A-.-0(0[1-9]|1[0-9]|2[1-7])
+RSI_A-Wing_South\ Landing\ 1=RSI-A-1-0(0[1-9]|1[0-9]|2[1-6])
+RSI_A-Wing_South\ Landing\ 2=RSI-A-2-0(0[1-9]|1[0-9]|2[1-6])
+RSI_A-Wing_South\ Landing\ 3=RSI-A-3-0(0[1-9]|1[0-9]|2[1-6])
 RSI_B-Wing=RSI-B-.+
 RSI_B-Wing_Landing\ 1=RSI-B-1-.+
 RSI_B-Wing_Landing\ 2=RSI-B-2-.+
