--- a/src/main/resources/application-localstack.yml
+++ b/src/main/resources/application-localstack.yml
@@ -1,10 +1,6 @@
-spring:
-  profiles:
-    include: dev
 sqs:
   provider: localstack
-  queue:
-    name: offender_whereabouts_queue
-  endpoint:
-    url: http://localhost:4576
-  region: eu-west-2
+  queue.name: whereabouts_api_queue
+  dlq.name: whereabouts_api_dlq
+  endpoint.url: http://localhost:4576
+
