--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,7 @@ dependencies {
     testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.12.0'
     testImplementation 'com.github.tomakehurst:wiremock-standalone:2.25.1'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
+    testImplementation 'org.testcontainers:localstack:1.12.3'
 
     compile configurations.agentDeps
 }
