--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -31,4 +31,7 @@ jwt:
 
 
 sqs:
-  provider: false
+  provider: embedded-localstack
+  endpoint.url: http://localhost:4576
+  queue.name: whereabouts_api_queue
+  dlq.name: whereabouts_api_dlq
