--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,9 +51,19 @@ executors:
     docker:
       - image: circleci/python:3
     working_directory: ~/app
-  builder:  
+  builder:
     docker:
       - image: circleci/openjdk:11-jdk-browsers
+      - image: localstack/localstack:0.10.5
+        environment:
+            - SERVICES=sqs
+            - DEBUG=${DEBUG- }
+            - DATA_DIR=/tmp/localstack/data
+            - DOCKER_HOST=unix:///var/run/docker.sock
+            - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR- }
+            - AWS_EXECUTION_ENV=True
+            - DEFAULT_REGION=eu-west-2
+            - TMPDIR=/private
     working_directory: ~/app
 
 orbs:
@@ -71,7 +81,10 @@ jobs:
           keys:
             - gradle-{{ checksum "build.gradle" }}
             - gradle-
-      - run: ./gradlew build
+      - run:
+          environment:
+            SQS_PROVIDER: 'localstack'
+          command: ./gradlew build
       - run:
           name: Record the Application Version
           command: |
