NN-2413 add court appointment

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -35,3 +35,6 @@ sqs:
   endpoint.url: http://localhost:4576
   queue.name: whereabouts_api_queue
   dlq.name: whereabouts_api_dlq
+
+
+courts: Test Court 1,Test Court 2
