--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,14 @@ import java.time.LocalDate
 
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version "1.3.61"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'groovy'
     id 'org.springframework.boot' version '2.2.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'org.owasp.dependencycheck' version '5.3.0'
     id 'com.github.ben-manes.versions' version '0.27.0'
-    id "org.jetbrains.kotlin.plugin.spring" version "1.3.61"
-    id "org.jetbrains.kotlin.plugin.jpa" version "1.3.61"
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.61'
 }
 
 apply plugin: "kotlin-allopen"
