--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,12 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'org.owasp.dependencycheck' version '5.3.0'
     id 'com.github.ben-manes.versions' version '0.27.0'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.61'
 }
+
+apply plugin: "kotlin-allopen"
+apply plugin: "kotlin-jpa"
 
 repositories {
     mavenLocal()
