--- a/src/main/resources/whereabouts/patterns/CDI.properties
+++ b/src/main/resources/whereabouts/patterns/CDI.properties
@@ -19,7 +19,7 @@ CDI_D-Wing_Landing\ 3=CDI-D-3-.+
 CDI_E-Wing=CDI-E-.+
 CDI_E-Wing\ Red\ Spur=CDI-E-1-0(0[1-9]|1[0-9]|2[0-4]),CDI-E-2-0(0[1-9]|1[0-9]|2[0-4])
 CDI_E-Wing\ Blue\ Spur=CDI-E-1-0(2[5-9]|3[0-9]|4[0-8]),CDI-E-2-0(2[5-9]|3[0-9]|4[0-8])
-CDI_E-Wing=CDI-F-.+
+CDI_F-Wing=CDI-F-.+
 CDI_F-Wing\ Red\ Spur=CDI-F-1-0(0[1-9]|1[0-9]|2[0-4]),CDI-F-2-0(0[1-9]|1[0-9]|2[0-4])
 CDI_F-Wing\ Blue\ Spur=CDI-F-1-0(2[5-9]|3[0-9]|4[0-8]),CDI-F-2-0(2[5-9]|3[0-9]|4[0-8])
 CDI_G-Wing=CDI-G-.+
