DT-370 Get the auth server public key from its jwk server

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,3 +86,9 @@ graceful:
 sqs:
   provider: aws
   endpoint.region: eu-west-2
+
+security:
+  oauth2:
+    resource:
+      jwk:
+        key-set-uri: http://localhost:9090/auth/.well-known/jwks.json
