--- a/src/main/resources/whereabouts/patterns/BCI.properties
+++ b/src/main/resources/whereabouts/patterns/BCI.properties
@@ -1,21 +1,21 @@
 # Buckley Hall
 BCI_A-Wing=BCI-A-.+
-BCI_A-Wing_Landing\ 1+2=BCI-A-1-.+,BCI-A-2.+
-BCI_A-Wing_Landing\ 3+4=BCI-A-3-.+,BCI-A-4.+
+BCI_A-Wing_Landing\ 1+2=BCI-A-[1-2]-.+
+BCI_A-Wing_Landing\ 3+4=BCI-A-[3-4]-.+
 BCI_A-Wing_Landing\ 1=BCI-A-1-.+
 BCI_A-Wing_Landing\ 2=BCI-A-2-.+
 BCI_A-Wing_Landing\ 3=BCI-A-3-.+
 BCI_A-Wing_Landing\ 4=BCI-A-4-.+
 BCI_B-Wing=BCI-B-.+
-BCI_B-Wing_Landing\ 1+2=BCI-B-1-.+,BCI-B-2.+
-BCI_B-Wing_Landing\ 3+4=BCI-B-3-.+,BCI-B-4.+
+BCI_B-Wing_Landing\ 1+2=BCI-B-[1-2]-.+
+BCI_B-Wing_Landing\ 3+4=BCI-B-[3-4]-.+
 BCI_B-Wing_Landing\ 1=BCI-B-1-.+
 BCI_B-Wing_Landing\ 2=BCI-B-2-.+
 BCI_B-Wing_Landing\ 3=BCI-B-3-.+
 BCI_B-Wing_Landing\ 4=BCI-B-4-.+
 BCI_C-Wing=BCI-C-.+
-BCI_C-Wing_Landing\ 1+2=BCI-C-1-.+,BCI-C-2.+
-BCI_C-Wing_Landing\ 3+4=BCI-C-3-.+,BCI-C-4.+
+BCI_C-Wing_Landing\ 1+2=BCI-C-[1-2]-.+
+BCI_C-Wing_Landing\ 3+4=BCI-C-[3-4]-.+
 BCI_C-Wing_Landing\ 1=BCI-C-1-.+
 BCI_C-Wing_Landing\ 2=BCI-C-2-.+
 BCI_C-Wing_Landing\ 3=BCI-C-3-.+
