NN-2471 add back in circleci env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,8 @@ jobs:
             - gradle-{{ checksum "build.gradle" }}
             - gradle-
       - run:
+          environment:
+            SQS_PROVIDER: 'localstack'
           command: ./gradlew build
       - run:
           name: Record the Application Version
