--- a/src/main/resources/whereabouts/patterns/groups.properties
+++ b/src/main/resources/whereabouts/patterns/groups.properties
@@ -255,7 +255,8 @@ WEI_H-Wing=WEI-H-.+
 WEI_I-Wing=WEI-I-.+
 WEI_J-Wing=WEI-J-.+
 WEI_Segregation=WEI-P-.+
-WEI_All\ Wings=WEI-A-.+,WEI-B-.+,WEI-C-.+,WEI-D-.+,WEI-E-.+,WEI-F-.+,WEI-G-.+,WEI-H-.+,WEI-I-.+,WEI-J-.+,WEI-P-.+
+WEI_All\ Wings=WEI-[ABCDEFGHIJP]-.+
+
 
 
 # Whitemoor (red has leading space to improve ordering)
