Update Wealstun whereabouts config (#136)
* Update Wealstun whereabouts config

* Update groups.properties

Simplify RegEx

Co-authored-by: Andrew Lee <1517745+andrewrlee@users.noreply.github.com>

--- a/src/main/resources/whereabouts/patterns/groups.properties
+++ b/src/main/resources/whereabouts/patterns/groups.properties
@@ -255,6 +255,8 @@ WEI_H-Wing=WEI-H-.+
 WEI_I-Wing=WEI-I-.+
 WEI_J-Wing=WEI-J-.+
 WEI_Segregation=WEI-P-.+
+WEI_All\ Wings=WEI-[ABCDEFGHIJP]-.+
+
 
 
 # Whitemoor (red has leading space to improve ordering)
