--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,13 @@ commands:
               --namespace="${KUBE_ENV_NAMESPACE}"
             # confirm setup is ok
             kubectl config use-context circleci
-            kubectl -n "${KUBE_ENV_NAMESPACE}" get deployments
   deploy_to_env:
     parameters:
       env:
         type: string
+      slack_notification:
+        type: boolean
+        default: false
     steps:
       - setup
       - checkout:
@@ -36,15 +38,24 @@ commands:
       - deploy:
           name: Deploy to << parameters.env >>
           command: |
+            APP=whereabouts-api
             APP_VERSION=$(cat ~/app/app_version.txt)
-            sed -i "s/appVersion: \".*\"/appVersion: \"${APP_VERSION}\"/g" ~/git/helm_deploy/whereabouts-api/Chart.yaml
+            echo "export APP_VERSION=$APP_VERSION;export APP=$APP" >> $BASH_ENV
+            sed -i "s/appVersion: \".*\"/appVersion: \"${APP_VERSION}\"/g" ~/git/helm_deploy/${APP}/Chart.yaml
             aws secretsmanager get-secret-value --secret-id ${KUBE_ENV_NAMESPACE} | jq -r .SecretString | \
-            helm upgrade whereabouts-api ~/git/helm_deploy/whereabouts-api/. \
+            helm upgrade ${APP} ~/git/helm_deploy/${APP}/. \
               --install --wait --reset-values --timeout 5m --history-max 10 \
               --namespace=${KUBE_ENV_NAMESPACE} \
               --values ~/git/helm_deploy/values-<< parameters.env >>.yaml \
               --values - \
               --set image.tag="${APP_VERSION}"
+      - when:
+          condition: <<parameters.slack_notification>>
+          steps:
+            - slack/notify:
+                message: "*${APP}* version:*${APP_VERSION}* deployed to << parameters.env >>"
+                include_project_field: false
+                include_job_number_field: false
 
 executors:
   deployer:
@@ -71,6 +82,7 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.18
   kubernetes: circleci/kubernetes@0.10.1
   helm: circleci/helm@0.2.3
+  slack: circleci/slack@3.4.2
 
 jobs:
   build:
@@ -158,6 +170,7 @@ jobs:
     steps:
       - deploy_to_env:
           env: "prod"
+          slack_notification: true
 
 workflows:
   version: 2
