NN-2484 convert test of the tests to junit 5

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,42 @@
 version: "3"
 services:
+  oauth:
+  image: mojdigitalstudio/nomis-oauth2-server:latest
+    container_name: oauth
+  ports:
+        - "9090:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/auth/health"]
+    environment:
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=dev
+
+  elite2:
+    image: mojdigitalstudio/elite2-api:latest
+    container_name: elite2
+    depends_on:
+      - oauth
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+    environment:
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=nomis-hsqldb
+
+  offender-case-notes:
+    image: mojdigitalstudio/offender-case-notes:latest
+    container_name: offender-case-notes
+    depends_on:
+      - elite2
+    ports:
+      - "8083:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+    environment:
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=dev
+      - ELITE2_API_BASE_URL=http://elite2-api:8080
 
   localstack:
     # pinned to 10.4 due to https://github.com/localstack/localstack/issues/1992
