NN-2512 fix tests and pass on username to token auth request

--- a/build.gradle
+++ b/build.gradle
@@ -162,6 +162,8 @@ dependencies {
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
     testImplementation 'org.testcontainers:localstack:1.12.5'
 
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+
     compile configurations.agentDeps
 }
 
