--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,14 @@ courts=Kingston upon Thames,Westminster,Southwark,City of London,Wimbledon
 
 elite2.uri.root=http://localhost:8080
 elite2.api.uri.root=${elite2.uri.root}/api
-auth.uri.root=${elite2.uri.root}
+
+auth.endpoint.url=http://localhost:9090/auth
 casenotes.endpoint.url=http://localhost:8083
 
 spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:local-public-key.pub
+api.health-timeout-ms: 1000
+
+management.endpoints.web.base-path=/
+management.endpoint.health.show-components=always
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=info,health,ping
